--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,7 @@
 
   <div class="wrapper">
 
+    <img src="/images/giana_avatar.png"/><br/>
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
     <nav class="site-nav">
